# sentinel

./: .gitignore  CMakeLists.txt  README.md
include/: external_log_watcher.h  logger.h  telemetry.h  ui_engine.h  web_server.h
scripts/: install.sh  sentinel.logrotate  sentinel.service  sentinelctl.sh
src/: external_log_watcher.cpp  logger.cpp  main.cpp  telemetry.cpp  ui_engine.cpp  web_server.cpp
